[package]
name = "eggdl"
version = "0.1.0"
authors = ["Philip Zucker <philzook58@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "egglog"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mybin"
path = "src/main.rs"



[dependencies]
nom = "6"
egg = "0.6.0"
wasm-bindgen = "0.2.74"
parking_lot = { version = "0.11.1", features = ["wasm-bindgen"]}