[package]
name = "egglog"
version = "0.1.0"
authors = ["Philip Zucker <philzook58@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "egglog"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "egglog"
path = "src/main.rs"


[dependencies]
nom = "6"
egg = { git = "https://github.com/philzook58/egg" } #{path = "../egg/"}
wasm-bindgen = "0.2.74"
parking_lot = { version = "0.11.1", features = ["wasm-bindgen"]}
clap = "3.0.0-beta.2"
rustyline = "8.2.0"